feat: Remove unused files

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@opentelemetry/api": "^1.4.1",
+    "@vercel/otel": "^0.3.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18"
