--- a/package.json
+++ b/package.json
@@ -1,29 +1,34 @@
 {
   "name": "my_profile",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "find-deadcode": "ts-prune"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.5.4",
     "@vercel/analytics": "^1.1.2",
-    "next": "14.0.4",
+    "negotiator": "^0.6.3",
+    "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/negotiator": "^0.6.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4",
+    "eslint-config-next": "14.1.0",
     "postcss": "^8",
-    "prettier": "^3.2.2",
-    "tailwindcss": "^3.3.0",
+    "prettier": "^3.2.5",
+    "tailwindcss": "^3.4.1",
+    "ts-prune": "^0.10.3",
     "typescript": "^5"
   }
 }
